# Cedo_Market

./: README.md  _init.py  app.py  forms.py  generate_hex.py  pyproject.toml  replit.nix
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
templates/: correct.html  home.html  login.html  market.html  marko.html  nav.html  register.html
templates/includes/: items_modal.html  sell_items_modal.html
